<resources>
    <string name="app_name">ScanQrCode</string>
    <string name="fullscreen_mode">fullscreen_mode</string>
    <string name="lock_code_reader">Trava leitor</string>
    <string name="info">Info</string>
    <string name="info_description">Info description</string>
    <string name="last_content_read">Último conteído lido</string>
    <string name="remover_ultima_captura">Remover captura realizada</string>
    <string name="barcode_format">Barcode Formato</string>
    <string name="unrecognized_code">Urecognize_code</string>
    <string name="open_url">Abrir URL</string>
    <string name="open_email">Abrir EMAIL</string>
    <string name="open_call">Abrir Discador</string>
    <string name="nothing_read">Sem leitura</string>
</resources>
