<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--<Button-->
        <!--android:id="@+id/btnScan"-->
        <!--android:text="Scan"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="32dp"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/resultadoLeitura"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"/>-->


    <FrameLayout
        android:id="@+id/fl_scanner"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <me.dm7.barcodescanner.zxing.ZXingScannerView
            android:id="@+id/z_xing_scanner"
            android:layout_width="match_parent"
            android:layout_height="250dp"/>

        <ImageButton
            android:id="@+id/imgb_fullscreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_fullscreen"
            android:contentDescription="@string/fullscreen_mode"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_fullscreen"/>

        <ImageButton
            android:id="@+id/flash_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="57dp"
            android:contentDescription="@string/lock_code_reader"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_highlight"/>


        <ImageButton
            android:id="@+id/imgb_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/lock_code_reader"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_lock"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/fl_scanner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/img_info"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:contentDescription="@string/info"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_info"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="8dp"
                  android:layout_marginStart="8dp"
                  android:layout_weight="1"
                  android:text="@string/info_description"
                  android:textColor="@android:color/white"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/last_content_read"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="0dp"
    />

    <TextView
        android:id="@+id/resultadoLeitura"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="32dp"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btn_open"
        tools:text="Resultado do última Scan do QR Code"
    />

    <ImageButton
        android:id="@+id/ib_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete_forever"
        android:scaleType="fitCenter"
        android:contentDescription="@string/remover_ultima_captura"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toTopOf="@id/resultadoLeitura"
        app:layout_constraintStart_toEndOf="@id/resultadoLeitura"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
        android:id="@+id/tipo_de_barra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/resultadoLeitura"
        app:layout_constraintStart_toStartOf="@+id/resultadoLeitura"
        app:layout_constraintEnd_toEndOf="@+id/resultadoLeitura"
        tools:text="Tipo do código de barra"
        />



    <Button
        android:id="@+id/btn_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="ABRIR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipo_de_barra" />

</androidx.constraintlayout.widget.ConstraintLayout>
